# indriya

./: .gitignore  ExPeriMot.sln  Indriya-core.sln  Indriya.sln  Indriya.sln.DotSettings  OpenCV.props  OpenCV2.props  OpenNI2.props  README.md  SDK.props  blockly_gen.bat  cloc.txt  cloc_code_statistics.csv  cloc_code_statistics.txt  cloc_execute.bat  cloc_execute_txt.bat  cloc_ignored_list.txt  cloc_include_list.txt  cloc_latex.txt  cloc_stat.py  index.html  message.html  params.json
Alvar_CalibrationTool/: Alvar_CalibrationTool.cpp  Alvar_CalibrationTool.vcxproj  Alvar_CalibrationTool.vcxproj.filters  ReadMe.txt  stdafx.cpp
CvKinectCalibration/: OpenCV_Calibration.vcxproj  OpenCV_Calibration.vcxproj.filters  out_camera_data.yml  sample_opencv_calib.xml
CvKinectCapture/: CvKinectCapture.h  CvKinectCapture.vcxproj  CvKinectCapture.vcxproj.filters  KinectVideoCapture.cpp  KinectVideoCapture.h  post_build.bat
ExperimotPerception/: App.xaml  App.xaml.cs  ExperimotPerception.csproj  KinectBodyPublisher.cs  MainWindow.xaml  MainWindow.xaml.cs  packages.config
GestureRecognition/: GestureCommon.cs  GestureDetector.cs  GestureRecognition.csproj  GestureResultView.cs  KinectBodyView.cs  MainWindow.xaml  MainWindow.xaml.cs
KinectPlayback/: KinectPlayback.csproj  MainWindow.xaml  MainWindow.xaml.cs
OpenCV_Calibration/: KinectVideoCapture.cpp  ReadMe.txt  (+6 more)
PCL_Tracker2/: CMakeLists.txt  PCL_Tracker2.vcxproj  PCL_Tracker2.vcxproj.filters  README  ReadMe.txt  cluster_segmentor.h  openni_tracking.cpp  pcl_tracking.cpp  stdafx.cpp  template_alignment.h  tracking_sample.cpp
(+2341 files in other folders)
